[package]
name = "spider-lib"
version = "0.1.0"
edition = "2021"
description = "A powerful, asynchronous web scraping library for Rust, built on the Tower ecosystem, aiming to be a flexible alternative to Scrapy."
license = "MIT"
repository = "https://github.com/mzyui/spider-lib"
homepage = "https://your-project-homepage.com"
keywords = ["spider", "crawler", "scraper", "web", "async", "tower", "scrapy", "rust"]
categories = ["web-programming::crawlers", "asynchronous"]
authors = ["mzyui <mzyui@proton.me>"]

[lib]
name = "spider_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
kanal = "0.1.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "fs", "io-std", "io-util"] }
tower = { version = "0.5", features = ["buffer", "limit", "util"] }


